specs/001-typescript-to-zig-native/examples/valid/function-call.ts
function add(a: int, b: int): int {
  return a + b;
}

console.log(add(2, 3));
