specs/001-typescript-to-zig-native/examples/invalid/import-named.ts
import { add } from "../valid/import-math.ts";

console.log(add(1, 2));
